<resources>
    <string name="app_name">The Game App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Game App</string>
    <string name="nav_header_subtitle">It is the best</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>

    <string name="menu_home">What\'s New</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_search_result">Search Results</string>

    <string name="search_title">Hello there</string>
    <string name="search_hint">Search for a game by name</string>

    <string name="game_details">Game Details</string>

    <string name="metacritic_headline">Metacritic Score</string>
    <string name="publisher_headline">Publisher:</string>
    <string name="platforms_headline">Platforms:</string>
    <string name="genres_headline">Genres:</string>
    <string name="release_date_headline">Released:</string>

    <string name="add_to_favorites_button">Add To Favorites</string>
    <string name="remove_from_favorites_button">Remove From Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
