<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.thegameapp.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_GameDetails"
            app:destination="@id/nav_game_details" />
        <action
            android:id="@+id/action_HomeFragment_to_SearchResultFragment"
            app:destination="@id/nav_search_result" />
    </fragment>

    <fragment
        android:id="@+id/nav_search_result"
        android:name="com.example.thegameapp.search.SearchResultFragment"
        android:label="@string/menu_search_result"
        tools:layout="@layout/fragment_search_result">

        <action
            android:id="@+id/action_SearchResultFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <action
            android:id="@+id/action_SearchResultFragment_to_GameDetails"
            app:destination="@id/nav_game_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_game_details"
        android:name="com.example.thegameapp.games.GameDetailsFragment"
        android:label="@string/game_details"
        tools:layout="@layout/fragment_game_details">
        <action
            android:id="@+id/action_GameDetailsFragment_to_HomeFragment"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_GameDetailsFragment_to_Search_Result"
            app:destination="@id/nav_search_result" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.thegameapp.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites">

        <action
            android:id="@+id/action_FavoriteFragment_to_GameDetails"
            app:destination="@id/nav_game_details" />
        <action
            android:id="@+id/action_Favorites_to_Search_Result"
            app:destination="@id/nav_search_result" />
    </fragment>

</navigation>